crates/solite-fmt/src/snapshots/solite_fmt__tests__select_join_using.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t join u using (id, name)

-- Output:
select
  a,
  b
from t
inner join u using(id, name);
