crates/solite-fmt/src/snapshots/solite_fmt__tests__select_multiple_columns.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b, c, d, e from t

-- Output:
select
  a,
  b,
  c,
  d,
  e
from t;
