crates/solite-fmt/src/snapshots/solite_fmt__tests__select_natural_join.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t natural join u

-- Output:
select
  a,
  b
from t
natural join u;
