crates/solite-fmt/src/snapshots/solite_fmt__tests__select_star.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from t

-- Output:
select * from t;
