crates/solite-fmt/src/snapshots/solite_fmt__tests__select_table_star.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select t.*, u.* from t, u

-- Output:
select
  t.*,
  u.*
from t, u;
