crates/solite-fmt/src/snapshots/solite_fmt__tests__select_union.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t union select b from u

-- Output:
select a
from t
union
select
  b
from u;
