crates/solite-fmt/src/snapshots/solite_fmt__tests__select_union_all.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t union all select b from u

-- Output:
select a
from t
union all
select
  b
from u;
